--- a/style/index.css
+++ b/style/index.css
@@ -65,7 +65,33 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
-
+header {
+    margin: 0 auto;
+    width: 800px;
+    height: 75px;
+    display: flex;
+    justify-content: space-between;
+}
+header img {
+    height: 50%;
+}
+header nav {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+header a {
+    font-size: 0.9rem;
+    text-decoration: none;
+    color: black;
+    align-self: flex-end;
+}
+.container #banner {
+    width: 100%;
+    margin-bottom: 2%;
+}
 .container {
     width: 800px;
     margin: 0 auto;
@@ -104,14 +130,13 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
+    background-color: black;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -134,7 +159,7 @@ footer {
 footer nav {
     width: 60%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 20px 2%;
     font-size: 14px;
@@ -143,4 +168,63 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+@media(max-width: 500px){
+    .container {
+        width: 100%;
+    }
+    header {
+        width: 100%;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+    header img {
+        margin: 0 auto;
+        width: 32%;
+    }
+    header nav {
+        display: flex;
+        flex-flow: column nowrap;
+    }
+    .middle-content .boxes {
+        display: flex;
+        flex-flow: column wrap;
+    }
+    .middle-content .boxes .box {
+        height: 100px;
+    }
+    footer nav {
+        padding: 2% 0;
+        display: flex;
+        flex-flow: column wrap;
+    }
+    footer a {
+        margin: 1.5% 0;
+    }
+}
+@media(max-width: 800px){
+    .container {
+        width: 100%;
+    }
+    header {
+        width: 100%;
+    }
+    .middle-content{
+        width: 100%;
+    }
+    .middle-content .boxes {
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .middle-content .boxes .box {
+        width: 250px;
+        height: 250px;
+    }
+    footer {
+        display: flex;
+        justify-content: center;
+    }
+    footer a {
+        font-size: 1rem;
+    }
 }
