--- a/style/index.css
+++ b/style/index.css
@@ -174,6 +174,7 @@ footer nav a {
         width: 100%;
     }
     header {
+        height: auto;
         width: 100%;
         display: flex;
         flex-flow: column nowrap;
@@ -183,8 +184,21 @@ footer nav a {
         width: 32%;
     }
     header nav {
+        width: 50%;
+        margin: 2% 0;
         display: flex;
-        flex-flow: column nowrap;
+        flex-flow: column wrap;
+        align-self: center;
+    }
+    header a {
+        align-self: center;
+        font-size: 1.2rem;
+        margin: 1% 0;
+    }
+    .top-content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
     .middle-content .boxes {
         display: flex;
@@ -193,6 +207,10 @@ footer nav a {
     .middle-content .boxes .box {
         height: 100px;
     }
+    .bottom-content {
+        display: flex;
+        flex-direction: column nowrap;
+    }
     footer nav {
         padding: 2% 0;
         display: flex;
@@ -200,6 +218,7 @@ footer nav a {
     }
     footer a {
         margin: 1.5% 0;
+        align-self: center;
     }
 }
 @media(max-width: 800px){
@@ -207,6 +226,27 @@ footer nav a {
         width: 100%;
     }
     header {
+        width: 100%;
+        padding: 2%;
+    }
+    header img {
+        align-self: center;
+        margin: 0 auto;
+    }
+    header nav {
+        align-self: center;
+        width: 75%;
+    }
+    header a {
+        font-size: 1.2rem;
+    }
+    .top-content {
+        padding: 2%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .top-content .text-container {
         width: 100%;
     }
     .middle-content{
@@ -217,14 +257,27 @@ footer nav a {
         flex-flow: row wrap;
     }
     .middle-content .boxes .box {
-        width: 250px;
-        height: 250px;
+        width: 30%;
+        height: 200px;
+    }
+    .bottom-content {
+        padding: 5% 0 12% 0;
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .bottom-content .text-container {
+        padding: 4% 0 4% 4%;
+        width: 50%;
     }
     footer {
         display: flex;
         justify-content: center;
+        padding: 3% 0;
+    }
+    footer nav {
+        width: 70%;
     }
     footer a {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 }
